// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FolderList does select selected folders 1`] = `
.c20 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c4 {
  position: relative;
}

.c9 {
  background: #eaf5ff;
  color: #66b7f1;
  padding-top: 8px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-left: 12px;
  border-radius: 4px;
}

.c11 {
  position: relative;
  z-index: 3;
  overflow: hidden;
  max-width: 100%;
}

.c12 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 16px;
}

.c3 {
  grid-column: span 3;
  max-width: 100%;
}

.c1 {
  font-weight: 500;
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c16 {
  font-weight: 500;
  color: #32324d;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c19 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c18 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c6 {
  background: #ffffff;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
  cursor: pointer;
  cursor: pointer;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 > * {
  margin-left: 0;
  margin-right: 0;
}

.c8 > * + * {
  margin-left: 12px;
}

.c5 {
  height: 100%;
  left: 0;
  position: absolute;
  opacity: 0;
  top: 0;
  width: 100%;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10 path {
  fill: currentColor;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14 {
  max-width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c17 {
  max-width: 100%;
}

@media (max-width:68.75rem) {
  .c3 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c3 {
    grid-column: span;
  }
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
    >
      <h2
        class="c1"
      >
        List title with selected items
      </h2>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class=""
        >
          <div
            class="c4"
          >
            <button
              aria-hidden="true"
              aria-label="Folder 1"
              class="c5"
              tabindex="-1"
              type="button"
            />
            <div
              class="c6 c7 c8"
              cursor="pointer"
              spacing="3"
            >
              <div
                class="c9"
              >
                <svg
                  class="c10"
                  fill="none"
                  height="1.125rem"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.414 5H21a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V4a1 1 0 011-1h7.414l2 2z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <div
                class="c11 c12 c13"
                id="folder-1-5-title"
                overflow="hidden"
              >
                <a
                  aria-current="page"
                  class="c14 active"
                  href="/"
                >
                  <h2
                    class="c15"
                  >
                    <span
                      class="c16 c17"
                    >
                      Folder 1
                      <div
                        class="c18"
                      >
                        :
                      </div>
                    </span>
                    <span
                      class="c19"
                    >
                      1
                       folder, 
                      1
                       assets
                    </span>
                  </h2>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class=""
        >
          <div
            class="c4"
          >
            <button
              aria-hidden="true"
              aria-label="Folder 2"
              class="c5"
              tabindex="-1"
              type="button"
            />
            <div
              class="c6 c7 c8"
              cursor="pointer"
              spacing="3"
            >
              <div
                class="c9"
              >
                <svg
                  class="c10"
                  fill="none"
                  height="1.125rem"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.414 5H21a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V4a1 1 0 011-1h7.414l2 2z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <div
                class="c11 c12 c13"
                id="folder-2-6-title"
                overflow="hidden"
              >
                <a
                  aria-current="page"
                  class="c14 active"
                  href="/"
                >
                  <h2
                    class="c15"
                  >
                    <span
                      class="c16 c17"
                    >
                      Folder 2
                      <div
                        class="c18"
                      >
                        :
                      </div>
                    </span>
                    <span
                      class="c19"
                    >
                      11
                       folder, 
                      12
                       assets
                    </span>
                  </h2>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c20"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`FolderList renders 1`] = `
.c20 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c4 {
  position: relative;
}

.c9 {
  background: #eaf5ff;
  color: #66b7f1;
  padding-top: 8px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-left: 12px;
  border-radius: 4px;
}

.c11 {
  position: relative;
  z-index: 3;
  overflow: hidden;
  max-width: 100%;
}

.c12 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 16px;
}

.c3 {
  grid-column: span 3;
  max-width: 100%;
}

.c1 {
  font-weight: 500;
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c16 {
  font-weight: 500;
  color: #32324d;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c19 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c18 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c6 {
  background: #ffffff;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
  cursor: pointer;
  cursor: pointer;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 > * {
  margin-left: 0;
  margin-right: 0;
}

.c8 > * + * {
  margin-left: 12px;
}

.c5 {
  height: 100%;
  left: 0;
  position: absolute;
  opacity: 0;
  top: 0;
  width: 100%;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10 path {
  fill: currentColor;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14 {
  max-width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c17 {
  max-width: 100%;
}

@media (max-width:68.75rem) {
  .c3 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c3 {
    grid-column: span;
  }
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
    >
      <h2
        class="c1"
      >
        List title
      </h2>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class=""
        >
          <div
            class="c4"
          >
            <button
              aria-hidden="true"
              aria-label="Folder 1"
              class="c5"
              tabindex="-1"
              type="button"
            />
            <div
              class="c6 c7 c8"
              cursor="pointer"
              spacing="3"
            >
              <div
                class="c9"
              >
                <svg
                  class="c10"
                  fill="none"
                  height="1.125rem"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.414 5H21a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V4a1 1 0 011-1h7.414l2 2z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <div
                class="c11 c12 c13"
                id="folder-1-1-title"
                overflow="hidden"
              >
                <a
                  aria-current="page"
                  class="c14 active"
                  href="/"
                >
                  <h2
                    class="c15"
                  >
                    <span
                      class="c16 c17"
                    >
                      Folder 1
                      <div
                        class="c18"
                      >
                        :
                      </div>
                    </span>
                    <span
                      class="c19"
                    >
                      1
                       folder, 
                      1
                       assets
                    </span>
                  </h2>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class=""
        >
          <div
            class="c4"
          >
            <button
              aria-hidden="true"
              aria-label="Folder 2"
              class="c5"
              tabindex="-1"
              type="button"
            />
            <div
              class="c6 c7 c8"
              cursor="pointer"
              spacing="3"
            >
              <div
                class="c9"
              >
                <svg
                  class="c10"
                  fill="none"
                  height="1.125rem"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.414 5H21a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V4a1 1 0 011-1h7.414l2 2z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <div
                class="c11 c12 c13"
                id="folder-2-2-title"
                overflow="hidden"
              >
                <a
                  aria-current="page"
                  class="c14 active"
                  href="/"
                >
                  <h2
                    class="c15"
                  >
                    <span
                      class="c16 c17"
                    >
                      Folder 2
                      <div
                        class="c18"
                      >
                        :
                      </div>
                    </span>
                    <span
                      class="c19"
                    >
                      11
                       folder, 
                      12
                       assets
                    </span>
                  </h2>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c20"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`FolderList renders with size=small 1`] = `
.c18 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  position: relative;
}

.c7 {
  background: #eaf5ff;
  color: #66b7f1;
  padding-top: 8px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-left: 12px;
  border-radius: 4px;
}

.c9 {
  position: relative;
  z-index: 3;
  overflow: hidden;
  max-width: 100%;
}

.c10 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 16px;
}

.c1 {
  grid-column: span 3;
  max-width: 100%;
}

.c14 {
  font-weight: 500;
  color: #32324d;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c17 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c16 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c4 {
  background: #ffffff;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
  cursor: pointer;
  cursor: pointer;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 > * {
  margin-left: 0;
  margin-right: 0;
}

.c6 > * + * {
  margin-left: 12px;
}

.c3 {
  height: 100%;
  left: 0;
  position: absolute;
  opacity: 0;
  top: 0;
  width: 100%;
}

.c3:hover,
.c3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 path {
  fill: currentColor;
}

.c11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c12 {
  max-width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c15 {
  max-width: 100%;
}

@media (max-width:68.75rem) {
  .c1 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c1 {
    grid-column: span;
  }
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class=""
        >
          <div
            class="c2"
          >
            <button
              aria-hidden="true"
              aria-label="Folder 1"
              class="c3"
              tabindex="-1"
              type="button"
            />
            <div
              class="c4 c5 c6"
              cursor="pointer"
              spacing="3"
            >
              <div
                class="c7"
              >
                <svg
                  class="c8"
                  fill="none"
                  height="1.125rem"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.414 5H21a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V4a1 1 0 011-1h7.414l2 2z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <div
                class="c9 c10 c11"
                id="folder-1-3-title"
                overflow="hidden"
              >
                <a
                  aria-current="page"
                  class="c12 active"
                  href="/"
                >
                  <h2
                    class="c13"
                  >
                    <span
                      class="c14 c15"
                    >
                      Folder 1
                      <div
                        class="c16"
                      >
                        :
                      </div>
                    </span>
                    <span
                      class="c17"
                    >
                      1
                       folder, 
                      1
                       assets
                    </span>
                  </h2>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1"
      >
        <div
          class=""
        >
          <div
            class="c2"
          >
            <button
              aria-hidden="true"
              aria-label="Folder 2"
              class="c3"
              tabindex="-1"
              type="button"
            />
            <div
              class="c4 c5 c6"
              cursor="pointer"
              spacing="3"
            >
              <div
                class="c7"
              >
                <svg
                  class="c8"
                  fill="none"
                  height="1.125rem"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.414 5H21a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V4a1 1 0 011-1h7.414l2 2z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <div
                class="c9 c10 c11"
                id="folder-2-4-title"
                overflow="hidden"
              >
                <a
                  aria-current="page"
                  class="c12 active"
                  href="/"
                >
                  <h2
                    class="c13"
                  >
                    <span
                      class="c14 c15"
                    >
                      Folder 2
                      <div
                        class="c16"
                      >
                        :
                      </div>
                    </span>
                    <span
                      class="c17"
                    >
                      11
                       folder, 
                      12
                       assets
                    </span>
                  </h2>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c18"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
